# cookiecutter-cpp

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
{{cookiecutter.repo_name}}/include/: {{cookiecutter.repo_name|lower}}.hpp
{{cookiecutter.repo_name}}/src/: CMakeLists.txt  {{cookiecutter.repo_name|lower}}.cpp
{{cookiecutter.repo_name}}/test/: CMakeLists.txt  test_{{cookiecutter.repo_name|lower}}.cpp
